# FirstQtApp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  backup.txt  base_list_manager_window.cpp  checkable_player_item_widget.cpp  display_teams_window.cpp  editable_label.cpp  group_item_widget.cpp  group_menu_window.cpp  groups_list_window.cpp  main.cpp  mainwindow.cpp  player_item_widget.cpp  players_list_window.cpp  read.md  resources.qrc  search_widget.cpp  team_list.cpp  team_player_item_widget.cpp  test.db  windows_manager.cpp
.github/workflows/: codeql.yml
Data/: groups.json  settings.json
Kohot/: CMakeLists.txt
Kohot/include/: group_menu.hpp  kohot.hpp  player.hpp  players_collection.hpp  team.hpp  teams_creator.hpp
Kohot/src/: final_menu.cpp  group_menu.cpp  groups_manager_menu.cpp  kohot.cpp  menu.cpp  player.cpp  players_collection.cpp  team.cpp  teams_creator.cpp
include/: app_common.hpp  base_item_widget.hpp  base_list_manager_window.h  base_player_item_widget.hpp  checkable_player_item_widget.hpp  create_teams_window.h  custom_window.h  display_teams_window.hpp  editable_label.h  group_input_dialog.hpp  group_item_widget.h  group_menu_window.h  groups_list_window.h  labeled_list_widget.hpp  mainwindow.h  player_input_dialog.hpp  player_item_widget.h  players_list_window.h  resource_paths.hpp  search_widget.hpp  team_list.hpp  team_player_item_widget.hpp  windows_manager.h
include/common/: app_common.hpp  fonts.hpp  resource_paths.hpp  settings_keys.hpp  static_settings.hpp
include/dialogs/: group_input_dialog.hpp  message_box_util.hpp  player_input_dialog.hpp  search_widget.hpp
include/items/: group_item_widget.hpp  player_item_widget.hpp  team_player_item_widget.hpp
include/widgets/: base_player_item_widget.hpp  editable_label.hpp  group_item_widget.hpp  labeled_list_widget.hpp
include/windows/: create_teams_window.hpp  groups_list_window.hpp  players_list_window.hpp  windows_manager.hpp
src/: base_list_manager_window.cpp  editable_label.cpp  group_item_widget.cpp  groups_list_window.cpp  main.cpp  search_widget.cpp
src/Items/: checkable_player_item_widget.cpp  group_item_widget.cpp  team_player_item_widget.cpp
src/common/: static_settings.cpp
src/dialogs/: group_input_dialog.cpp  message_box_util.cpp  player_input_dialog.cpp
src/widgets/: editable_label.cpp  group_item_widget.cpp  player_item_widget.cpp  team_list.cpp
src/windows/: create_teams_window.cpp  display_teams_window.cpp  groups_list_window.cpp  players_list_window.cpp  windows_manager.cpp
